{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 32,
  "lineage": "326f91d0-bfaa-cb40-4f05-319d456fd4f1",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250560144241:vpc/vpc-0e5f661f529e64ed3",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-053b33eded89086e8",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0d855e5b5589306df",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e5f661f529e64ed3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-032904c910af46e97",
            "owner_id": "250560144241"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aae19d30bab785d3",
            "arn": "arn:aws:ec2:us-east-1:250560144241:instance/i-00cdb31fef5078127",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "adhdlockin-bastion-profile",
            "id": "i-00cdb31fef5078127",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fd80976a797c508d",
            "private_dns": "ip-172-31-70-71.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.70.71",
            "public_dns": "ec2-100-54-96-208.compute-1.amazonaws.com",
            "public_ip": "100.54.96.208",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0dd7b099d035b9fd4",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "adhdlockin-bastion-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a07a832177e97819",
            "tags": {
              "Name": "adhdlockin-bastion"
            },
            "tags_all": {
              "Name": "adhdlockin-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08f028106b8426d9b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.bastion_profile",
            "aws_iam_role.bastion_role",
            "aws_security_group.bastion_sg",
            "data.aws_ami.amazon_linux",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250560144241:security-group/sg-08f028106b8426d9b",
            "description": "Bastion for SSM tunnel to RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f028106b8426d9b",
            "ingress": [],
            "name": "adhdlockin-bastion-sg",
            "name_prefix": "",
            "owner_id": "250560144241",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "adhdlockin-bastion-sg"
            },
            "tags_all": {
              "Name": "adhdlockin-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5f661f529e64ed3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250560144241:security-group/sg-05e410c8c39805572",
            "description": "Lambda security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e410c8c39805572",
            "ingress": [],
            "name": "adhdlockin-lambda-sg",
            "name_prefix": "",
            "owner_id": "250560144241",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "adhdlockin-lambda-sg"
            },
            "tags_all": {
              "Name": "adhdlockin-lambda-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5f661f529e64ed3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250560144241:security-group/sg-036cf1169d0f25874",
            "description": "RDS - only Lambda and Bastion can access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-036cf1169d0f25874",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Lambda access",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05e410c8c39805572"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "adhdlockin-rds-sg",
            "name_prefix": "",
            "owner_id": "250560144241",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "adhdlockin-rds-sg"
            },
            "tags_all": {
              "Name": "adhdlockin-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5f661f529e64ed3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.lambda_sg",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Bastion SSM tunnel access",
            "from_port": 5432,
            "id": "sgrule-1837707575",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-036cf1169d0f25874",
            "security_group_rule_id": "sgr-0a2779564cd162169",
            "self": false,
            "source_security_group_id": "sg-08f028106b8426d9b",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.lambda_sg",
            "aws_security_group.rds_sg",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}